data/derived/comb/progs/unify/prog6238.ml.out
Characters 81-91:
  | (ki,vi) :: t -> Printf.fprintf "%s, %d\n" ki vi; if ki == k then vi else assoc(d,k,t);;
                                   ^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         out_channel
